--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings":{
+    "DefaultConnection":"server=192.168.128.209;user=apolo;password=Apo1oC@mp3r;database=JLeonTienda"
   }
 }
